<resources>
    <string name="app_name">SpringAndroidCrud</string>
    <string name="book_list">Book List</string>
    <string name="load_books_success">%1$d books loaded</string>
    <string name="load_books_fail">Books cannot be loaded</string>
    <string name="book_view">View Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_authors">Authors</string>
    <string name="book_genre">Genre</string>
    <string name="book_total_pages">Pages</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_publisher_name">Publisher</string>
    <string name="book_published_year">Year</string>
    <string name="load_book_success">Book[id=%1$d] loaded</string>
    <string name="load_book_fail">Book cannot be loaded</string>
    <string name="delete_book_success">Book[id=%1$d] deleted</string>
    <string name="delete_book_fail">Book cannot be deleted</string>
    <string name="create_book_btn">Create Book</string>
    <string name="update_book_btn">Update Book</string>
    <string name="delete_book_btn">Delete Book</string>
    <string name="request_fail">Request failed</string>

    <string name="delete">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this item?</string>
    <string name="dialog_option_ok">OK</string>
    <string name="dialog_option_cancel">Cancel</string>

    <string name="book_edit">Edit Book</string>
    <string name="load_authors_fail">Authors cannot be loaded</string>
    <string name="load_genres_fail">Genres cannot be loaded</string>
    <string name="load_Publishers_fail">Publishers cannot be loaded</string>
    <string name="duplicated_author_error">Duplicated author</string>
    <string name="book_author_required">Book author required</string>
    <string name="book_update_success">Book update succeeded</string>
    <string name="book_update_fail">Book update failed</string>

    <string name="book_create">Create Book</string>
    <string name="book_create_success">Book created</string>
    <string name="book_create_fail">Book creation failed</string>
    <string name="duplcate_title_or_isbn">Duplicate title or ISBN</string>

</resources>
